fix z-index for searchDropdown

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,4 +10,6 @@
     align-items: center;
     padding: 0 20px;
     justify-content: space-around;
+    position: relative;
+    z-index: 1;
   }
