--- a/src/components/searchDropdown/searchDropdown.css
+++ b/src/components/searchDropdown/searchDropdown.css
@@ -3,7 +3,7 @@
   position: absolute;
   width: 100%;
   transition: all ease 0.7s;
-  z-index: -1;
+  z-index: 0;
   height: 30px;
   padding: 28px 20px;
   justify-content: space-around;
